# spam-msg-detection

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  pyproject.toml  requirements.txt
app/: frontend.py  main.py  pre_processing.py  training.py
model/: label_encoder.joblib  spam_msg_detector.joblib  tfidf_vectorizer.joblib
utils/: contractions.py  slangs.py
