[project]
name = "spam-msg-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "demoji>=2.0.0",
    "fastapi[standard]>=0.136.3",
    "joblib>=1.5.3",
    "nltk>=3.9.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
